Complete control plane multi-device stage
